--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,9 @@
-.DS_Store
-node_modules
-/dist
+# Backend (for Node.js example)
+/backend/node_modules/
+/backend/dist/
+/backend/.env
 
-
-# local env files
-.env.local
-.env.*.local
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Frontend (for React/Angular example)
+/frontend/node_modules/
+/frontend/build/
+/frontend/.env
